--- a/beta/OdinV0.1/app/src/main/res/values/strings.xml
+++ b/beta/OdinV0.1/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
-    <string name="app_name">OdinV0.1</string>
+    <string name="app_name">Odin</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Configurações</string>
     <string name="title_activity_main2">Main2Activity</string>
-    <string name="title_activity_base_firebase">Resultado da Busca</string>
+    <string name="title_activity_base_firebase">Odin</string>
 </resources>
